--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,31 +8,18 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      # 1) Node
+      # Устанавливаем pnpm (глобально для раннера)
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 9
+
+      # Node + кеш для pnpm (работает после action-setup)
       - uses: actions/setup-node@v4
         with:
           node-version: 20
+          cache: pnpm
+          cache-dependency-path: pnpm-lock.yaml
 
-      # 2) Устанавливаем pnpm через Corepack
-      - name: Enable Corepack
-        run: corepack enable
-
-      - name: Use pnpm@9
-        run: corepack prepare pnpm@9 --activate
-
-      # 3) Кэшируем pnpm store (вместо cache: pnpm в setup-node)
-      - name: Get pnpm store path
-        id: pnpm-store
-        run: echo "STORE_PATH=$(pnpm store path)" >> $GITHUB_ENV
-
-      - uses: actions/cache@v4
-        with:
-          path: ${{ env.STORE_PATH }}
-          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-pnpm-store-
-
-      # 4) Установка и проверки
       - name: Install deps
         run: pnpm install --frozen-lockfile
 
